--- a/assets/sass/libs/_skel.scss
+++ b/assets/sass/libs/_skel.scss
@@ -1,4 +1,3 @@
-// skel.scss v3.0.1 | (c) skel.io | MIT licensed */
 
 // Vars.
 
@@ -42,6 +41,8 @@
 		'flex-shrink',
 		'flex-wrap',
 		'justify-content',
+		'object-fit',
+		'object-position',
 		'order',
 		'perspective',
 		'pointer-events',
