--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,7 @@ body {
 }
 
 body {
-    background: #1b1f22;
+    background: #ffffff;
 }
 
 body.is-loading *, body.is-loading *:before, body.is-loading *:after, body.is-switching *, body.is-switching *:before, body.is-switching *:after {
@@ -219,7 +219,7 @@ blockquote {
 }
 
 code {
-    background: rgba(255, 255, 255, 0.075);
+    background: #ffffff;
     border-radius: 4px;
     font-family: "Courier New", monospace;
     font-size: 0.9rem;
